<resources>
    <string name="app_name">Banco Digital</string>

    <!--    Generic -->
    <string name="text_name_empty">Digite seu nome.</string>
    <string name="text_email_empty">Digite seu e-mail.</string>
    <string name="text_phone_empty">Digite seu telefone.</string>
    <string name="text_phone_invalid">Digite um telefone válido.</string>
    <string name="text_password_empty">Digite sua senha.</string>
    <string name="error_generic">Ocorreu um erro, verifique seus dados ou tente novamente mais tarde.</string>
    <string name="text_ok">OK</string>
    <string name="text_continue">CONTINUAR</string>

    <string name="text_register">Criar Conta</string>
    <string name="text_hint_email">E-mail</string>
    <string name="text_hint_password">Senha</string>
    <string name="text_btn_login">ENTRAR</string>
    <string name="text_btn_register">Criar Conta</string>
    <string name="text_btn_recover">Recuperar Conta</string>

    <!--    DEPÓSITO -->
    <string name="text_confirm">CONFIRMAR</string>
    <string name="text_depoist">DEPOSITAR</string>
    <string name="info_depoist">Informe o valor abaixo:</string>
    <string name="value_depoist">Valor do Depósito</string>
    <string name="text_receipt">RECIBO</string>
    <string name="text_receipt_sucess">Depósito efetuado\n com sucesso!</string>
    <string name="text_receipt_subtitle">Seu depósito ficará disponível em até 3 dias úteis.</string>
    <string name="code_transaction">Código Transação</string>
    <string name="date_hour_transaction">Data e horário do depósito:</string>
    <string name="value_transaction">Valor do depósito:</string>
    <string name="text_phone_recharge">Número:</string>

    <!--    RECARGA -->
    <string name="text_recharge_confirm">CONFIRMAR</string>
    <string name="info_recharge">Informe o valor abaixo:</string>
    <string name="value_recharge">Valor da Recarga</string>
    <string name="text_title_recharge">RECIBO</string>
    <string name="text_receipt_recharge_sucess">Recarga efetuada\n com sucesso!</string>
    <string name="text_receipt_subtitle_recharge">Sua recarga ficará disponível em instantes.</string>
    <string name="code_transaction_recharge">Código Transação</string>
    <string name="date_hour_transaction_recharge">Data e horário da recarga:</string>
    <string name="value_transaction_recharge">Valor da Recarga:</string>

    <string name="text_recharge_title">RECARGA</string>
    <string name="text_recharge">Insira o Número</string>
    <string name="text_confirm_recharge">CONFIRMAR</string>


    <!--    EXTRACT -->
    <string name="text_extract">EXTRATO</string>

    <!--    TRANSFER USER LIST -->
    <string name="text_title">USUÁRIOS</string>

    <!--    RECOVER -->
    <string name="text_descryption_recover">Digite seu e-mail que te enviaremos um link para você alterar sua senha</string>
    <string name="text_email_recover">E-mail</string>
    <string name="text_hint_recover_email">Digite seu e-mail</string>
    <string name="text_btn_send_email">ENVIAR E-MAIL</string>

    <!--    REGISTER -->
    <string name="text_create_account">Criar Conta</string>
    <string name="text_name_register">Nome</string>
    <string name="text_hint_name_register">Digite seu nome</string>
    <string name="text_email_register">E-mail</string>
    <string name="text_hint_email_register">Digite seu e-mail</string>
    <string name="text_phone_register">Telefone</string>
    <string name="text_hint_phone_register">Digite seu telefone</string>
    <string name="text_password_register">Senha</string>
    <string name="text_hint_password_register">Digite sua senha</string>
    <string name="text_btn_register_sucess">CADASTRAR</string>

    <!--    Profile -->
    <string name="title_profile">Perfil</string>
    <string name="btn_profile">SALVAR</string>
    <string name="text_message_sucess">Perfil salvo com sucesso!</string>

    <string name="text_camera_denied">Permissão de câmera necessária. Acesse as configurações e ative.</string>
    <string name="text_gallery_denied">Permissão de galeria necessária. Acesse as configurações e ative.</string>

    <!--    Bottom Sheet -->
    <string name="text_title_bottom_sheet">ATENÇÃO</string>
    <string name="text_button_bottom_sheet">ENTENDI</string>

    <!--    Bottom Sheet PROFILE -->
    <string name="text_title_bottom_sheet_profile">Adicionar Imagem de Perfil</string>
    <string name="text_message_bottom_sheet_profile">Escolha sua foto de perfil.</string>
    <string name="text_button_camera_bottom_sheet_profile">CÂMERA</string>
    <string name="text_button_gallery_bottom_sheet_profile">GALERIA</string>

    <!--    LoginFragment -->


    <!--    RecoverFragment -->
    <string name="text_message_send_email_sucess_recover_fragment">Email enviado com sucesso.</string>

    <!--    Erros Firebase Authentication-->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail/senha.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>

    <!--    HomeFragment -->
    <string name="text_formated_value">R$ %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>